add movielist template

--- a/movies/templates/base.html
+++ b/movies/templates/base.html
@@ -16,8 +16,8 @@
     {% endblock others %}
 </head>
 <body class='bg-black text-gray-100 font-primary'>
-    {% include "partials/navbar.html" %}
-    
+    {% include "navbar.html" %}
+
     {% block content %}
 
     {% endblock content %}
