--- a/movies/templates/index.html
+++ b/movies/templates/index.html
@@ -12,7 +12,7 @@
 
 {% block content %}
 
-    <header class="min-h-screen bg-black bg-opacity-75 showcase border-gray-600 border-b-8 flex justify-center items-center bg-no-repeat">
+    <header class="min-h-screen bg-black bg-opacity-75 showcase border-gray-600 border-b-8 flex justify-center items-center bg-no-repeat" style="background-image:url('/static/images/background_netflix.jpg') ;">
         <div class="z-10 h-full py-32 md:py-0 text-gray-100 text-center flex items-center flex-col">
             <h1 class="font-semibold text-4xl md:text-5xl w-10/12 md:w-3/4 text-center">
                 Unlimited movies, TV shows, and more.
@@ -87,9 +87,8 @@
     <footer class=" px-5 py-10 ">
         <ul class="flex justify-between items-center">
             
-            <li>&copy; 2021</li>
-            <li> Made with Django and Tailwind</li>
-            <li>By OtchereDev</li>
+            <li>&copy; 2022</li><br>
+            <li> Made with Great Minds Association</li>
         </ul>
     </footer>
 
