--- a/movies/templates/movieList.html
+++ b/movies/templates/movieList.html
@@ -11,7 +11,7 @@ Netflix
 {% block content %}
 
     <main class='bg-primary_black min-h-screen w-full'>
-        <section class="h-screen relative bg-no-repeat pb-8 pl-6 flex  items-end bg-cover">
+        <section class="h-screen relative bg-no-repeat pb-8 pl-6 flex  items-end bg-cover" style="background-image: url(/static/images/movie.webp);">
             <div>
                 <h2 class="text-6xl font-semibold text-white my-4">
                     {{show_case.title}}
