--- a/movies/templates/profileCreate.html
+++ b/movies/templates/profileCreate.html
@@ -5,7 +5,7 @@ Netflix - Profile
 {% endblock title %}
 
 {% block content %}
-<section class='bg-primary_black min-h-screen py-20 md:py-32 flex-col flex items-center'>
+<section class='bg-primary_black min-h-screen py-20 md:py-32 flex-col flex items-center' style="background-image:url(/static/images/background_netflix.jpg) ;">
     <div class="flex flex-wrap justify-center  w-10/12  md:w-6/12">
         <form method='POST' class="w-full md:w-8/12 bg-gray-900 p-5 rounded-lg">
             {% if request.user.profiles.all|length > 5 %}
