--- a/movies/templates/movieList.html
+++ b/movies/templates/movieList.html
@@ -21,7 +21,7 @@ Netflix
                     {% lorem 1 %}
                 </p>
                 <div class="flex my-4">
-                    <a href="{% url 'core:play' movie_id=show_case.uuid %}">
+                    <a href="{% url 'movies:play' movie_id=show_case.uuid %}">
                     
                         <button class="flex items-center bg-white py-2 px-5 rounded-md" style='color:black;'>
                             <ion-icon name="play" class="text-2xl"></ion-icon>
@@ -31,7 +31,7 @@ Netflix
                         </button>
                     </a>
 
-                    <a href="{% url 'core:show_det' movie_id=show_case.uuid %}">
+                    <a href="{% url 'movies:show_det' movie_id=show_case.uuid %}">
                         <button class="ml-4 text-white flex items-center bg-gray-500 bg-opacity-80 py-2 px-5 rounded-md">
                         
                             <ion-icon name="information-circle-outline" class="text-2xl" ></ion-icon>
@@ -53,7 +53,7 @@ Netflix
                 <div class="flex   items-center min-w-full  movie_lis">
                     {% for movie in movies %}
                     
-                        <a href="{% url 'core:show_det' movie_id=movie.uuid %}">
+                        <a href="{% url 'movies:show_det' movie_id=movie.uuid %}">
                             <div class=" h-40 m-4  bg-blue-500 overflow-hidden flex-shrink-0 rounded-md cursor-pointer w-40">
                                 <img src="{{movie.flyer.url}}" class="w-full h-full " alt="">
                             </div>
