--- a/movies/templates/navbar.html
+++ b/movies/templates/navbar.html
@@ -1,9 +1,8 @@
 {% load static %}
 <nav class="flex text-gray-100 justify-between items-center py-3 px-4 fixed w-full z-50">
-        <div class="w-6/12">
+        <div>
             <a href='/'>
-            
-            <img src="/static/images/netflix.png" alt="logo" class="w-5/12 md:w-2/12">
+            <img src="/static/images/netflix.png" alt="logo" class="logo"><br>
             </a>
         </div>
 
@@ -12,20 +11,19 @@
             <div>
             <form action="./account/login.html" method="post">
                 {% csrf_token %}
-                <button class='bg-primary_red py-1 px-3 text-white md:text-lg rounded-md'>
+                <button class='button'>
                     Logout
                 </button>
             </form>
             </div>
             {% else %}
-            <div>
-            <a href="{% url 'account_login' %}">
-
-                <button class='bg-primary_red py-1 px-3 text-white md:text-lg rounded-md'>
-                    Sign In 
-                </button>
-            </a>
-            </div>
+                <div>
+                    <a href="./account/login.html">
+                        <button class='button'>
+                            Sign In 
+                        </button>
+                    </a>
+                </div>
             {% endif %}
         {% endif %}
-    </nav>
+</nav>
