--- a/movies/templates/account/signup.html
+++ b/movies/templates/account/signup.html
@@ -10,10 +10,10 @@ Netflix Sign Up
 </head>
 
 {% block content %}
-<header class="min-h-screen w-full bg-black bg-opacity-75 showcase relative border-gray-600 border-b-8 flex justify-center py-20 bg-no-repeat" style="background-image:url(/static/images/background_netflix.jpg);">
+<header style="background-image:url(/static/images/background_netflix.jpg);">
     <div class="z-10 min-h-full py-32 md:py-0 text-gray-100 w-6/12  flex items-center flex-col">
         <form method='POST' class="bg-black bg-opacity-70 min-h-full py-8 px-4 w-8/12 rounded-md" >
-            <h1 class="text-4xl font-semibold text-center ">
+            <h1 class="sign">
                 Sign Up
             </h1>
             {% csrf_token %}
@@ -56,7 +56,7 @@ Netflix Sign Up
 
             <div class="text-center mt-4">
                 <p>
-                    Have account already ? <a href="{% url 'account_login' %}" class="text-blue-600"> Log In</a>
+                    Have account already ? <a href="./login.html"> Log In</a>
                 </p>
             </div>
         </form>
