--- a/movies/templates/profileList.html
+++ b/movies/templates/profileList.html
@@ -6,9 +6,6 @@ Netflix - Profile
 {% endblock title %}
 
 {% block content %}
-    {% include 'partials/navbar.html' %}
-
-
 
     <section class='bg-primary_black min-h-screen py-20 md:py-0 flex-col flex justify-center items-center'>
         <h2 class="text-center font-medium text-5xl my-4 text-gray-100">
@@ -18,7 +15,7 @@ Netflix - Profile
         <div class="flex flex-wrap justify-center items-center w-10/12  md:w-6/12">
 
         {% for profile in profiles %}
-            <a href="{% url 'core:watch' profile_id=profile.uuid %}">
+            <a href="{% url 'movies:watch' profile_id=profile.uuid %}">
             
                 <div class="w-32 h-32 m-4  bg-blue-500 flex justify-center items-center flex-col rounded-md cursor-pointer">
                     <p class='text-6xl'>
@@ -35,7 +32,7 @@ Netflix - Profile
         {% if request.user.profiles.all|length < 5 %}
       
             <div class="flex justify-center items-center">
-                <a href="{% url 'core:profile_create' %}">
+                <a href="./profileCreate.html">
                     
                     <button class="px-4 py-2 rounded-md outline-none bg-gray-400 text-gray-100">
                         Add A New Profile
