--- a/movies/templates/index.html
+++ b/movies/templates/index.html
@@ -9,7 +9,7 @@
 {% endblock others %}
     
 {% block content %}
-    <header class="column" style="background-image:url(/static/images/background_netflix.jpg)"><br><br>
+    <header class="column"><br><br>
         <div class="container">
             <h1 class="row">
                 Unlimited movies, TV shows, and more.
